--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
   "name": "Mercedes",
   "version": "4.5.0",
-  "description": "A joke",
+  "description": "A WhatsApp bot",
   "main": "marisel.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Joshuaisikah/Mercedes.git"
+  },
+  "license": "MIT",
   "scripts": {
-    "start": "pm2 start marisel.js --deep-monitoring --attach --name Mercedes",
-    "stop": "pm2 stop Mercedes",
-    "restart": "pm2 restart Mercedes"
+    "start": "node marisel.js",
+    "dev": "node marisel.js",
+    "build": "echo 'Build complete'"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
+    "@whiskeysockets/baileys": "^6.7.8",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@dark-yasiya/yt-dl.js": "1.0.5",
+    "@dark-yasiya/yt-dl.js": "^1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vitalets/google-translate-api": "^9.2.0",
-    "@dark-yasiya/scrap":"1.0.1",    
-    "pino": "^7.0.5",
-    "pm2": "^6.0.5",
-    "util": "^0.12.4",
-    "express": "latest",
+    "@dark-yasiya/scrap": "^1.0.1",
+    "pino": "^8.19.0",
+    "express": "^4.18.2",
     "moment-timezone": "^0.5.45",
-    "axios": "^1.2.5",
-    "crypto-digest-sync": "^1.0.0",
-    "crypto-js": "latest",
-    "file_size_url": "1.0.4",
-    "fs-extra": "^11.1.0",
-    "fs": "^0.0.1-security",
-    "ffmpeg": "^0.0.4",
-    "file-type": "^16.5.3",
-    "fluent-ffmpeg": "^2.1.2",
+    "axios": "^1.6.7",
+    "crypto-js": "^4.2.0",
+    "file_size_url": "^1.0.4",
+    "fs-extra": "^11.2.0",
+    "file-type": "^19.0.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
     "google-tts-api": "^2.0.2",
-    "path": "^0.12.7",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^3.3.2",
     "btch-downloader": "^2.2.9",
-    "megajs": "^1.1.0",
-    "pdfkit": "^0.14.0",
-    "wa_set_pkg": "1.0.5",
+    "megajs": "^1.2.1",
+    "pdfkit": "^0.15.0",
+    "wa_set_pkg": "^1.0.5",
     "wa-sticker-formatter": "^4.4.4",
-    "path": "^0.12.7",
-    "vm": "^0.1.0",
-    "adm-zip": "^0.5.16",
+    "adm-zip": "^0.5.10",
     "cheerio": "^1.0.0-rc.12",
-    "ruhend-scraper" : "8.0.3",
     "qrcode-terminal": "^0.12.0",
-    "yt-search":"2.11.1",
+    "yt-search": "^2.11.1",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7",
-    "vm": "^0.1.0",
-    "api-dylux":"1.8.5",
-    "@mrnima/tiktok-downloader":"1.0.0",
-    "@mrnima/facebook-downloader":"1.0.0",
-    "mrnima-moviedl":"1.0.0"
+    "api-dylux": "^1.8.5",
+    "@mrnima/tiktok-downloader": "^1.0.0",
+    "@mrnima/facebook-downloader": "^1.0.0",
+    "mrnima-moviedl": "^1.0.0",
+    "uuid": "^9.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
