--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "cheerio": "^1.0.0-rc.12",
     "qrcode-terminal": "^0.12.0",
     "yt-search": "^2.11.1",
-    "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.7",
+    "better-sqlite3": "^9.4.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "api-dylux": "^1.8.5",
     "@mrnima/tiktok-downloader": "^1.0.0",
     "@mrnima/facebook-downloader": "^1.0.0",
